# pkmn

./: .appvejor.yml  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONCEPT.md  CONTRIBUTING.md  EasyInstall.ps1  README.md  easy_install.sh  gen_data.py  requirements.txt
assets/: splashscreen.txt
src/: anim.cpp  anim.hpp  main.cpp  models.cpp  models.hpp  str_format.hpp  utils.cpp  utils.hpp
